# anyforecast-scripts

./: .gitignore  README.md  pyproject.toml  requirements.txt
anyforecast_scripts/: options.py
anyforecast_scripts/cli_options/: __init__.py  _skorchforecasting_options.py
anyforecast_scripts/data/: __init__.py  stallion.csv
anyforecast_scripts/preprocessing/: __init__.py  _preprocessing.py
anyforecast_scripts/seq2seq/: MLproject  main.py  python_env.yaml  requirements.txt  train.py
src/anyforecast_scripts/networks/: options.py
src/anyforecast_scripts/networks/seq2seq/: main.py  python_env.yaml
tests/seq2seq/: test_main.py  test_train.py
